@@ -12,16 +12,16 @@ public class DurationBuilderUnitTest extends AbstractWeldUnitTest {
 	@Test
 	public void build() {
 		assertDuration( __inject__(DurationBuilder.class).execute().getOutput(), null, null, null);
-		assertDuration( __inject__(DurationBuilder.class).setNumberOfMillisecond(0l).execute().getOutput(), new Short("0"), new Byte("0"), new Byte("0"));
-		assertDuration( __inject__(DurationBuilder.class).setNumberOfMillisecond(1l).execute().getOutput(), new Short("1"), new Byte("0"), new Byte("0"));
-		assertDuration( __inject__(DurationBuilder.class).setNumberOfMillisecond(999l).execute().getOutput(), new Short("999"), new Byte("0"), new Byte("0"));
-		assertDuration( __inject__(DurationBuilder.class).setNumberOfMillisecond(1000l).execute().getOutput(), new Short("0"), new Byte("1"), new Byte("0"));
-		assertDuration( __inject__(DurationBuilder.class).setNumberOfMillisecond(1001l).execute().getOutput(), new Short("1"), new Byte("1"), new Byte("0"));
-		assertDuration( __inject__(DurationBuilder.class).setNumberOfMillisecond(10000l).execute().getOutput(), new Short("0"), new Byte("10"), new Byte("0"));
-		assertDuration( __inject__(DurationBuilder.class).setNumberOfMillisecond(10001l).execute().getOutput(), new Short("1"), new Byte("10"), new Byte("0"));
-		assertDuration( __inject__(DurationBuilder.class).setNumberOfMillisecond(11001l).execute().getOutput(), new Short("1"), new Byte("11"), new Byte("0"));
-		assertDuration( __inject__(DurationBuilder.class).setNumberOfMillisecond(60000l).execute().getOutput(), new Short("0"), new Byte("0"), new Byte("1"));
-		assertDuration( __inject__(DurationBuilder.class).setNumberOfMillisecond(71001l).execute().getOutput(), new Short("1"), new Byte("11"), new Byte("1"));
+		assertDuration( __inject__(DurationBuilder.class).setNumberOfMillisecond(0l).execute().getOutput(), Short.valueOf("0"), Byte.valueOf("0"), Byte.valueOf("0"));
+		assertDuration( __inject__(DurationBuilder.class).setNumberOfMillisecond(1l).execute().getOutput(), Short.valueOf("1"), Byte.valueOf("0"), Byte.valueOf("0"));
+		assertDuration( __inject__(DurationBuilder.class).setNumberOfMillisecond(999l).execute().getOutput(), Short.valueOf("999"), Byte.valueOf("0"), Byte.valueOf("0"));
+		assertDuration( __inject__(DurationBuilder.class).setNumberOfMillisecond(1000l).execute().getOutput(), Short.valueOf("0"), Byte.valueOf("1"), Byte.valueOf("0"));
+		assertDuration( __inject__(DurationBuilder.class).setNumberOfMillisecond(1001l).execute().getOutput(), Short.valueOf("1"), Byte.valueOf("1"), Byte.valueOf("0"));
+		assertDuration( __inject__(DurationBuilder.class).setNumberOfMillisecond(10000l).execute().getOutput(), Short.valueOf("0"), Byte.valueOf("10"), Byte.valueOf("0"));
+		assertDuration( __inject__(DurationBuilder.class).setNumberOfMillisecond(10001l).execute().getOutput(), Short.valueOf("1"), Byte.valueOf("10"), Byte.valueOf("0"));
+		assertDuration( __inject__(DurationBuilder.class).setNumberOfMillisecond(11001l).execute().getOutput(), Short.valueOf("1"), Byte.valueOf("11"), Byte.valueOf("0"));
+		assertDuration( __inject__(DurationBuilder.class).setNumberOfMillisecond(60000l).execute().getOutput(), Short.valueOf("0"), Byte.valueOf("0"), Byte.valueOf("1"));
+		assertDuration( __inject__(DurationBuilder.class).setNumberOfMillisecond(71001l).execute().getOutput(), Short.valueOf("1"), Byte.valueOf("11"), Byte.valueOf("1"));
 	}
 	
 	/**/
